app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require leaflet
 *= require_tree . 
 // most likely to be commented out as per Bootstrap documentation
 *= require_self   
 // most likely to be commented out as per Bootstrap documentation
 */
 //@import "dashboard";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "alertify";
 @import "alertify/default";
 @import "alertify/bootstrap";



 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";

.bolds {
  font-weight: bold;
}

.leaflet-container {   
  height:400px; 
  width: 800px; 
}

.container { // Arrange a better container size AS it is no showing correctly or at least make new container for 800 onwards
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

.homelinks a {
    color: #004fff;
}



/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

